--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 <h4 style="opacity: inherit;"> <br>Signora Lifestyle </h4>
                                 <span> Abuja's Top Luxurious Boutique &amp; Styling  </span>
                                 <div class="main-border-button">
-                                    <a href="#">Visit Us!</a>
+                                    <a href="about.html">Discover More!</a>
                                 </div>
                             </div>
                             <img src="b3.jpg"alt="">
@@ -120,7 +120,7 @@
                                                 <h4>2023 Collection </h4>
                                                 <p> All carefully chosen to ensure that every piece is  well-made and stylish</p>
                                                 <div class="main-border-button">
-                                                    <a href="#">Discover More</a>
+                                                    <a href="shoes.html">Discover More</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -140,7 +140,7 @@
                                                 <h4>About Signora </h4>
                                                 <p>A destination for fashion-forward women in Nigeria  </p>
                                                 <div class="main-border-button">
-                                                    <a href="#">Discover More</a>
+                                                    <a href="about.html">Discover More</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -160,7 +160,7 @@
                                                 <h4>Place a Purchase </h4>
                                                 <p> Find clothing that makes you feel confident and comfortable </p>
                                                 <div class="main-border-button">
-                                                    <a href="#">Discover More</a>
+                                                    <a href="howtoorder.html">Discover More</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -180,7 +180,7 @@
                                                 <h4>Get In Touch </h4>
                                                 <p>Contact Us For Any Query We Are Always Happy To Help  .</p>
                                                 <div class="main-border-button">
-                                                    <a href="#">Discover More</a>
+                                                    <a href="contact.html">Discover More</a>
                                                 </div>
                                             </div>
                                         </div>
